--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rooms-avail",
+  "homepage": "https://jurisportfolio.github.io/rooms-avail/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +8,15 @@
     "@material-ui/core": "^4.1.3",
     "@material-ui/pickers": "^3.1.2",
     "date-fns": "^2.0.0-beta.2",
+    "gh-pages": "^2.0.1",
     "jsonp": "^0.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
